# camshaft-pre-dispatch-inspection

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: admin.py  auth.py  blob_photos.py  engine.py  export.py  investigation.py  manager.py  notifications.py  operator.py  reports.py  upload.py
app/core/: config.py  logging.py  security.py
app/db/: init_db.py  session.py  types.py
app/models/: __init__.py  audit.py  checklist.py  inspection.py  machine.py  qr_data.py  role.py  user.py
app/schemas/: admin.py  auth.py  export.py  inspection.py  manager.py  report.py
app/services/: admin.py  audit.py  auth.py  blob_engine.py  inspection.py  inspection_engine.py  lock_manager.py  manager.py  qr_parser.py  reports.py  validation.py
database/: 01_schema.sql  02_indexes_views.sql  03_procedures_triggers.sql  04_seed_data.sql
database_v2/: 01_tcl_schema.sql  02_tcl_views.sql  03_tcl_plsql.sql  04_tcl_seed_data.sql  README.md
docs/: api.md  architecture.md  database.md  deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/: App.jsx  main.jsx  pwa.js  theme.js
frontend/src/api/: client.js
frontend/src/components/: ChecklistItemCard.jsx  ConfirmDialog.jsx  EmptyState.jsx  ErrorAlert.jsx  ExportButton.jsx  GlobalSearchBar.jsx  Shell.jsx  (+13 more)
scripts/: verify.py
tests/: conftest.py  test_api.py  test_blob_engine.py  test_engine.py
(+18 files in other folders)
